--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Muhammad Arif | Personal Website</title>
+    <title>Muhammad Arif  Personal Website</title>
     <meta name="description" content="Muhammad Arif's personal website. Software Engineering student with passion for AI and technology from Buner, KPK.">
     <meta name="keywords" content="Muhammad Arif, Software Engineer, Buner, AI, DIT, Sarhad University, Personal Website">
     <link rel="icon" href="favicon.png" type="image/png">
